awas/sireum-awas-parser-antlr4/src/main/java/org/sireum/awas/parser/antlr4/Antlr4AwasParser.java
// Generated from /Users/robby/Repositories/Sireum-Private/sireum-v3/awas/sireum-awas-parser-antlr4/src/main/resources/org/sireum/awas/parser/antlr4/Antlr4Awas.g4 by ANTLR 4.5.1
package org.sireum.awas.parser.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Antlr4AwasParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            INTEGER = 39, REAL = 40, STRING = 41, ID = 42, WS = 43, COMMENT = 44, LINE_COMMENT = 45,
            ERROR_CHAR = 46;
    public static final int
            RULE_modelFile = 0, RULE_model = 1, RULE_unitDecl = 2, RULE_namespaceDecl = 3,
            RULE_name = 4, RULE_importEnumDecl = 5, RULE_enclosureDecl = 6, RULE_modelElement = 7,
            RULE_componentDecl = 8, RULE_connectionDecl = 9, RULE_enumDecl = 10, RULE_states = 11,
            RULE_transition = 12, RULE_dependency = 13, RULE_port = 14, RULE_portAlias = 15,
            RULE_property = 16, RULE_type = 17, RULE_basicType = 18, RULE_init = 19,
            RULE_mapEntry = 20;
    public static final String[] ruleNames = {
            "modelFile", "model", "unitDecl", "namespaceDecl", "name", "importEnumDecl",
            "enclosureDecl", "modelElement", "componentDecl", "connectionDecl", "enumDecl",
            "states", "transition", "dependency", "port", "portAlias", "property",
            "type", "basicType", "init", "mapEntry"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'namespace'", "'::'", "'import'", "'as'", "'enclosure'", "'ports'",
            "'for'", "'component'", "'dependencies'", "'properties'", "'connection'",
            "'.'", "'->'", "'enum'", "'lattice'", "'extends'", "','", "'states'",
            "'='", "'['", "']'", "'transitions'", "'-['", "']->'", "'in'", "'out'",
            "':'", "'Set'", "'Seq'", "'Map'", "'Boolean'", "'Integer'", "'Real'",
            "'String'", "'true'", "'false'", "'('", "')'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, "INTEGER", "REAL", "STRING", "ID", "WS", "COMMENT",
            "LINE_COMMENT", "ERROR_CHAR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Antlr4Awas.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public Antlr4AwasParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ModelFileContext extends ParserRuleContext {
        public ModelContext model() {
            return getRuleContext(ModelContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(Antlr4AwasParser.EOF, 0);
        }

        public ModelFileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_modelFile;
        }
    }

    public final ModelFileContext modelFile() throws RecognitionException {
        ModelFileContext _localctx = new ModelFileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_modelFile);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(42);
                model();
                setState(43);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModelContext extends ParserRuleContext {
        public List<UnitDeclContext> unitDecl() {
            return getRuleContexts(UnitDeclContext.class);
        }

        public UnitDeclContext unitDecl(int i) {
            return getRuleContext(UnitDeclContext.class, i);
        }

        public ModelContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_model;
        }
    }

    public final ModelContext model() throws RecognitionException {
        ModelContext _localctx = new ModelContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_model);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__10) | (1L << T__13))) != 0)) {
                    {
                        {
                            setState(45);
                            unitDecl();
                        }
                    }
                    setState(50);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class UnitDeclContext extends ParserRuleContext {
        public NamespaceDeclContext namespaceDecl() {
            return getRuleContext(NamespaceDeclContext.class, 0);
        }

        public List<ImportEnumDeclContext> importEnumDecl() {
            return getRuleContexts(ImportEnumDeclContext.class);
        }

        public ImportEnumDeclContext importEnumDecl(int i) {
            return getRuleContext(ImportEnumDeclContext.class, i);
        }

        public EnclosureDeclContext enclosureDecl() {
            return getRuleContext(EnclosureDeclContext.class, 0);
        }

        public List<ModelElementContext> modelElement() {
            return getRuleContexts(ModelElementContext.class);
        }

        public ModelElementContext modelElement(int i) {
            return getRuleContext(ModelElementContext.class, i);
        }

        public UnitDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_unitDecl;
        }
    }

    public final UnitDeclContext unitDecl() throws RecognitionException {
        UnitDeclContext _localctx = new UnitDeclContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_unitDecl);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                _la = _input.LA(1);
                if (_la == T__0) {
                    {
                        setState(51);
                        namespaceDecl();
                    }
                }

                setState(57);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(54);
                            importEnumDecl();
                        }
                    }
                    setState(59);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(61);
                _la = _input.LA(1);
                if (_la == T__4) {
                    {
                        setState(60);
                        enclosureDecl();
                    }
                }

                setState(64);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1: {
                            {
                                setState(63);
                                modelElement();
                            }
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(66);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NamespaceDeclContext extends ParserRuleContext {
        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public NamespaceDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_namespaceDecl;
        }
    }

    public final NamespaceDeclContext namespaceDecl() throws RecognitionException {
        NamespaceDeclContext _localctx = new NamespaceDeclContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_namespaceDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(T__0);
                setState(69);
                name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NameContext extends ParserRuleContext {
        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public NameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_name;
        }
    }

    public final NameContext name() throws RecognitionException {
        NameContext _localctx = new NameContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_name);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(71);
                match(ID);
                setState(76);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__1) {
                    {
                        {
                            setState(72);
                            match(T__1);
                            setState(73);
                            match(ID);
                        }
                    }
                    setState(78);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ImportEnumDeclContext extends ParserRuleContext {
        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(Antlr4AwasParser.ID, 0);
        }

        public ImportEnumDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_importEnumDecl;
        }
    }

    public final ImportEnumDeclContext importEnumDecl() throws RecognitionException {
        ImportEnumDeclContext _localctx = new ImportEnumDeclContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_importEnumDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(T__2);
                setState(80);
                name();
                setState(83);
                _la = _input.LA(1);
                if (_la == T__3) {
                    {
                        setState(81);
                        match(T__3);
                        setState(82);
                        match(ID);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class EnclosureDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4AwasParser.ID, 0);
        }

        public List<PortContext> port() {
            return getRuleContexts(PortContext.class);
        }

        public PortContext port(int i) {
            return getRuleContext(PortContext.class, i);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public List<PortAliasContext> portAlias() {
            return getRuleContexts(PortAliasContext.class);
        }

        public PortAliasContext portAlias(int i) {
            return getRuleContext(PortAliasContext.class, i);
        }

        public EnclosureDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_enclosureDecl;
        }
    }

    public final EnclosureDeclContext enclosureDecl() throws RecognitionException {
        EnclosureDeclContext _localctx = new EnclosureDeclContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_enclosureDecl);
        int _la;
        try {
            setState(109);
            switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(85);
                    match(T__4);
                    setState(86);
                    match(ID);
                    setState(94);
                    _la = _input.LA(1);
                    if (_la == T__5) {
                        {
                            setState(87);
                            match(T__5);
                            setState(91);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == T__24 || _la == T__25) {
                                {
                                    {
                                        setState(88);
                                        port();
                                    }
                                }
                                setState(93);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(96);
                    match(T__4);
                    setState(97);
                    match(ID);
                    setState(98);
                    match(T__6);
                    setState(99);
                    name();
                    setState(107);
                    _la = _input.LA(1);
                    if (_la == T__5) {
                        {
                            setState(100);
                            match(T__5);
                            setState(104);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__25) | (1L << ID))) != 0)) {
                                {
                                    {
                                        setState(101);
                                        portAlias();
                                    }
                                }
                                setState(106);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModelElementContext extends ParserRuleContext {
        public ComponentDeclContext componentDecl() {
            return getRuleContext(ComponentDeclContext.class, 0);
        }

        public ConnectionDeclContext connectionDecl() {
            return getRuleContext(ConnectionDeclContext.class, 0);
        }

        public EnumDeclContext enumDecl() {
            return getRuleContext(EnumDeclContext.class, 0);
        }

        public ModelElementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_modelElement;
        }
    }

    public final ModelElementContext modelElement() throws RecognitionException {
        ModelElementContext _localctx = new ModelElementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_modelElement);
        try {
            setState(114);
            switch (_input.LA(1)) {
                case T__7:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(111);
                    componentDecl();
                }
                break;
                case T__10:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(112);
                    connectionDecl();
                }
                break;
                case T__13:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(113);
                    enumDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ComponentDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4AwasParser.ID, 0);
        }

        public StatesContext states() {
            return getRuleContext(StatesContext.class, 0);
        }

        public List<PortContext> port() {
            return getRuleContexts(PortContext.class);
        }

        public PortContext port(int i) {
            return getRuleContext(PortContext.class, i);
        }

        public List<PropertyContext> property() {
            return getRuleContexts(PropertyContext.class);
        }

        public PropertyContext property(int i) {
            return getRuleContext(PropertyContext.class, i);
        }

        public List<DependencyContext> dependency() {
            return getRuleContexts(DependencyContext.class);
        }

        public DependencyContext dependency(int i) {
            return getRuleContext(DependencyContext.class, i);
        }

        public ComponentDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_componentDecl;
        }
    }

    public final ComponentDeclContext componentDecl() throws RecognitionException {
        ComponentDeclContext _localctx = new ComponentDeclContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_componentDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                match(T__7);
                setState(117);
                match(ID);
                setState(134);
                _la = _input.LA(1);
                if (_la == T__5) {
                    {
                        setState(118);
                        match(T__5);
                        setState(122);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__24 || _la == T__25) {
                            {
                                {
                                    setState(119);
                                    port();
                                }
                            }
                            setState(124);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(132);
                        _la = _input.LA(1);
                        if (_la == T__8) {
                            {
                                setState(125);
                                match(T__8);
                                setState(129);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == ID) {
                                    {
                                        {
                                            setState(126);
                                            dependency();
                                        }
                                    }
                                    setState(131);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                            }
                        }

                    }
                }

                setState(143);
                _la = _input.LA(1);
                if (_la == T__9) {
                    {
                        setState(136);
                        match(T__9);
                        setState(140);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == ID) {
                            {
                                {
                                    setState(137);
                                    property();
                                }
                            }
                            setState(142);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(146);
                _la = _input.LA(1);
                if (_la == T__17) {
                    {
                        setState(145);
                        states();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConnectionDeclContext extends ParserRuleContext {
        public Token fromComponent;
        public Token fromPort;
        public Token toComponent;
        public Token toPort;

        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public List<PropertyContext> property() {
            return getRuleContexts(PropertyContext.class);
        }

        public PropertyContext property(int i) {
            return getRuleContext(PropertyContext.class, i);
        }

        public ConnectionDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_connectionDecl;
        }
    }

    public final ConnectionDeclContext connectionDecl() throws RecognitionException {
        ConnectionDeclContext _localctx = new ConnectionDeclContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_connectionDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                match(T__10);
                setState(149);
                ((ConnectionDeclContext) _localctx).fromComponent = match(ID);
                setState(152);
                _la = _input.LA(1);
                if (_la == T__11) {
                    {
                        setState(150);
                        match(T__11);
                        setState(151);
                        ((ConnectionDeclContext) _localctx).fromPort = match(ID);
                    }
                }

                setState(154);
                match(T__12);
                setState(155);
                ((ConnectionDeclContext) _localctx).toComponent = match(ID);
                setState(158);
                _la = _input.LA(1);
                if (_la == T__11) {
                    {
                        setState(156);
                        match(T__11);
                        setState(157);
                        ((ConnectionDeclContext) _localctx).toPort = match(ID);
                    }
                }

                setState(167);
                _la = _input.LA(1);
                if (_la == T__9) {
                    {
                        setState(160);
                        match(T__9);
                        setState(164);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == ID) {
                            {
                                {
                                    setState(161);
                                    property();
                                }
                            }
                            setState(166);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class EnumDeclContext extends ParserRuleContext {
        public Token id;
        public Token ID;
        public List<Token> supers = new ArrayList<Token>();

        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public EnumDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_enumDecl;
        }
    }

    public final EnumDeclContext enumDecl() throws RecognitionException {
        EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_enumDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(169);
                match(T__13);
                setState(171);
                _la = _input.LA(1);
                if (_la == T__14) {
                    {
                        setState(170);
                        match(T__14);
                    }
                }

                setState(173);
                ((EnumDeclContext) _localctx).id = match(ID);
                setState(183);
                _la = _input.LA(1);
                if (_la == T__15) {
                    {
                        setState(174);
                        match(T__15);
                        setState(175);
                        ((EnumDeclContext) _localctx).ID = match(ID);
                        ((EnumDeclContext) _localctx).supers.add(((EnumDeclContext) _localctx).ID);
                        setState(180);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__16) {
                            {
                                {
                                    setState(176);
                                    match(T__16);
                                    setState(177);
                                    ((EnumDeclContext) _localctx).ID = match(ID);
                                    ((EnumDeclContext) _localctx).supers.add(((EnumDeclContext) _localctx).ID);
                                }
                            }
                            setState(182);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatesContext extends ParserRuleContext {
        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public List<TransitionContext> transition() {
            return getRuleContexts(TransitionContext.class);
        }

        public TransitionContext transition(int i) {
            return getRuleContext(TransitionContext.class, i);
        }

        public StatesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_states;
        }
    }

    public final StatesContext states() throws RecognitionException {
        StatesContext _localctx = new StatesContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_states);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(185);
                match(T__17);
                setState(186);
                match(T__18);
                setState(187);
                match(T__19);
                setState(188);
                match(ID);
                setState(193);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__16) {
                    {
                        {
                            setState(189);
                            match(T__16);
                            setState(190);
                            match(ID);
                        }
                    }
                    setState(195);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(196);
                match(T__20);
                setState(204);
                _la = _input.LA(1);
                if (_la == T__21) {
                    {
                        setState(197);
                        match(T__21);
                        setState(201);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == ID) {
                            {
                                {
                                    setState(198);
                                    transition();
                                }
                            }
                            setState(203);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TransitionContext extends ParserRuleContext {
        public Token fromState;
        public Token toState;

        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public TransitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_transition;
        }
    }

    public final TransitionContext transition() throws RecognitionException {
        TransitionContext _localctx = new TransitionContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_transition);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(206);
                ((TransitionContext) _localctx).fromState = match(ID);
                setState(207);
                match(T__22);
                setState(208);
                match(T__23);
                setState(209);
                ((TransitionContext) _localctx).toState = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DependencyContext extends ParserRuleContext {
        public Token fromPort;
        public Token toPort;

        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public DependencyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dependency;
        }
    }

    public final DependencyContext dependency() throws RecognitionException {
        DependencyContext _localctx = new DependencyContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_dependency);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(211);
                ((DependencyContext) _localctx).fromPort = match(ID);
                setState(212);
                match(T__12);
                setState(213);
                ((DependencyContext) _localctx).toPort = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PortContext extends ParserRuleContext {
        public Token mod;

        public TerminalNode ID() {
            return getToken(Antlr4AwasParser.ID, 0);
        }

        public PortContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_port;
        }
    }

    public final PortContext port() throws RecognitionException {
        PortContext _localctx = new PortContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_port);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(215);
                ((PortContext) _localctx).mod = _input.LT(1);
                _la = _input.LA(1);
                if (!(_la == T__24 || _la == T__25)) {
                    ((PortContext) _localctx).mod = (Token) _errHandler.recoverInline(this);
                } else {
                    consume();
                }
                setState(216);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PortAliasContext extends ParserRuleContext {
        public Token mod;
        public Token id;
        public Token alias;

        public List<TerminalNode> ID() {
            return getTokens(Antlr4AwasParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4AwasParser.ID, i);
        }

        public PortAliasContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_portAlias;
        }
    }
